again program cards overlapping issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -742,7 +742,7 @@ a:focus {
     margin-bottom: 30px;
     overflow: hidden;
     transition: .3s;
-    z-index: 9;
+    z-index: 1;
 }
 
 .class .class-wrap {
@@ -753,6 +753,7 @@ a:focus {
 
 .class .class-img {
     position: relative;
+    z-index: 1;
 }
 
 .class .class-img img {
@@ -760,6 +761,7 @@ a:focus {
     width: 100%; 
     height: 100%; 
     object-fit: cover;
+    
 }
 
 .class .class-text {
